# credmark-risk-and-research

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  serverless.yml
product-deployment/HackathonScoringEngine/: scoringEngine.py
product-deployment/smartpool/: credmark-currentprod.py
research-development/: data-info.txt
research-development/APREngine/: APRCalc-Rebalance.py  APRCalc.py  rds_config.py  strategyComparison.py  swapDataDownload.py  swapDataFilter.py
research-development/Assets_Covariance/: Historical_Data.ipynb
research-development/CurveClientDepeg/: CurveDepeg Detection.ipynb  CurveDepegDetectionOld.ipynb  curve_finance.ipynb  pool_contracts.txt  pools_list.txt
research-development/OnChainSources/: On-Chain-Data-Research.ipynb  abracadabra.ipynb  addresses.csv
research-development/PythonModelSDK/: uniswapv3_WBTC_ETH_historical_price_contract.ipynb
research-development/PythonModelSDK/.ipynb_checkpoints/: uniswapv3_WBTC_ETH_historical_price_contract-checkpoint.ipynb
research-development/PythonModelSDK/lending_protocols/: AaveV2-Assets.ipynb  pools_transaction_details_fetching_using_etherscan_api_hex.ipynb  uniswapV2_subgraph_api.ipynb
research-development/SmartPool/: credmark-range.py  credmark-static.py  dayBollingerPositionRecommendation.py  rsi-rebalance.py  rsi-static.py  walletstrategy.py
research-development/UniswapV3ModelDeployment/: UniV3Hackathon-LSTM.ipynb  bollingerHoldAPR.py
research-development/WalletProfiling/UniswapV2/: 100transactions.csv  MASTER_LOGS.json  MASTER_LOGS.pickle  (+7 more)
src/: handlers.py
(+96 files in other folders)
