[tool.poetry]
name = "risk-terminal-metrics"
version = "0.1.0"
description = "Collection of lambdas used for producing metrics in Credmark Risk Terminal"
authors = ["0xPeterSatoshi <peter@credmark.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
boto3 = "^1.20.26"
gql = "^2.0.0"
requests = "^2.26.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
